--- a/caliber/src/main/webapp/static/app/partials/manage/edit-trainee-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/manage/edit-trainee-modal.html
@@ -107,7 +107,7 @@
 							<div class="form-group col-lg-12 col-md-12 col-sm-12">
 								<label for="traineeProfile">Profile URL:</label> <input
 									ng-model="traineeForm.profileUrl" type="text"
-									class="form-control" id="traineeName"
+									class="form-control" id="traineeProfileUrl"
 									placeholder="http://www.example.com/revature">
 							</div>
 						</div>
