--- a/caliber/src/main/webapp/static/app/partials/manage/edit-trainee-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/manage/edit-trainee-modal.html
@@ -127,10 +127,10 @@
 						</div>
 					</div>
 					<div class="modal-footer">
-						<input id = "saveButton" type="submit" value="Save" class="btn btn-primary" ng-show="!Updating.status"/>
-						<button id="cancelButton" type="button" class="btn btn-default" data-dismiss="modal"
+						<input id = "saveButtonAdd" type="submit" value="Save" class="btn btn-primary" ng-show="!Updating.status"/>
+						<button id="cButton" type="button" class="btn btn-default" data-dismiss="modal"
 							ng-show="!Updating.status">Close</button>
-						<input id = "saveButton" type="submit" value="Update" class="btn btn-primary"
+						<input id = "saveButtonUpdate" type="submit" value="Update" class="btn btn-primary"
 							ng-show="Updating.status" )>
 						<button id = "cancelButton" type="button" class="btn btn-default" data-dismiss="modal"
 							ng-show="Updating.status">Cancel</button>
