--- a/caliber/src/main/webapp/static/app/partials/assess/trainer-assess.html
+++ b/caliber/src/main/webapp/static/app/partials/assess/trainer-assess.html
@@ -156,7 +156,7 @@
 					<div
 						class="form-group col-lg-12 col-md-12 col-sm-12 overall-feedback">
 						<textarea ng-model="$parent.trainerBatchNote.content"
-							class="form-control" name="asdfjkl;" id="trainerBatchNote"
+							class="form-control" name="$parent.trainerBatchNote.content" id="trainerBatchNote"
 							ng-blur="saveTrainerNotes(trainerBatchNote.noteId)"
 							placeholder="Enter your overall feedback on the batch" required>
 					</textarea>
