Lots of changest and tests

--- a/caliber/src/main/webapp/static/app/partials/locations/edit-location-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/locations/edit-location-modal.html
@@ -35,7 +35,7 @@
 							<div class="form-group col-lg-6 col-md-6 col-sm-12">
 								<label for="locationCity">City:</label> <input
 									ng-model="locationForm.city" type="text" class="form-control"
-									id="locationStreet" placeholder="Enter City" required>
+									id="locationCity" placeholder="Enter City" required>
 							</div>
 							<div class="form-group col-lg-6 col-md-6 col-sm-12">
 								<label for="locationState">State:</label> <select
