--- a/caliber/src/main/webapp/static/app/partials/manage/view-trainees-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/manage/view-trainees-modal.html
@@ -86,7 +86,7 @@
 										data-toggle="modal" data-target="#addTraineeModal"
 										type="button"> <span class="glyphicon glyphicon-pencil"></span>
 									</a></td>
-									<td><a id = "removeTrainee{{$index}}" role="button" class="pull-right"
+									<td><a id = "removeTrainee{{trainee.name}}" role="button" class="pull-right"
 										ng-click="getTraineeToDelete($index)" data-toggle="modal"
 										data-target="#deleteTraineeModal"><span
 											class="glyphicon glyphicon-remove" aria-hidden="true">
