Edit Settings feature complete

--- a/caliber/src/main/webapp/static/app/partials/assess/trainer-assess.html
+++ b/caliber/src/main/webapp/static/app/partials/assess/trainer-assess.html
@@ -188,7 +188,7 @@
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<button id="xBtn" type="button" class="close" data-dismiss="modal"
+				<button id="assessmentXBtn" type="button" class="close" data-dismiss="modal"
 					aria-label="Close">
 					<span aria-hidden="true">&times;</span>
 				</button>
@@ -231,8 +231,8 @@
 
 				</div>
 				<div class="modal-footer">
-					<input id="saveBtn" type="submit" value="Save" class="btn btn-primary">
-					<button id="closeBtn" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					<input id="assessmentSaveBtn" type="submit" value="Save" class="btn btn-primary">
+					<button id="assessmentCloseBtn" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 				</div>
 			</form>
 		</div>
