--- a/caliber/src/main/webapp/static/app/partials/locations/create-location-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/locations/create-location-modal.html
@@ -5,7 +5,7 @@
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<button id="XBtn" type="button" class="close" data-dismiss="modal"
+					<button id="createLocationXBtn" type="button" class="close" data-dismiss="modal"
 						aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
@@ -115,9 +115,9 @@
 						
 					</div>
 					<div class="modal-footer">
-						<input id="submintBtn" type="submit" ng-value="Save" class="btn btn-primary"
+						<input id="createLocationSubmintBtn" type="submit" ng-value="Save" class="btn btn-primary"
 						data-dismiss="modal" ng-click="createLocation(locationForm)">
-						<button id="closeBtn" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+						<button id="createLocationCloseBtn" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 					</div>
 				</div>
 			</div>
