--- a/caliber/src/main/webapp/static/app/partials/locations/delete-location-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/locations/delete-location-modal.html
@@ -5,7 +5,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button id="XBtn" type="button" class="close" data-dismiss="modal"
+                    <button id="deleteLocationXBtn" type="button" class="close" data-dismiss="modal"
                         aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -17,9 +17,9 @@
                     <br />
                 </div>
                 <div class="modal-footer">
-                    <input id="deactivateBtn" type="submit" ng-click="removeLocation(selectedLocation)" value="Deactivate"
+                    <input id="deleteLocationDeactivateBtn" type="submit" ng-click="removeLocation(selectedLocation)" value="Deactivate"
                         class="btn btn-lg btn-danger" >
-                    <button id="cancelBtn" type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button id="deleteLocationCancelBtn" type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                 </div>
             </div>
         </div>
