--- a/caliber/src/main/webapp/static/app/partials/locations/edit-location-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/locations/edit-location-modal.html
@@ -5,7 +5,7 @@
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<button id="XBtn" type="button" class="close" data-dismiss="modal"
+					<button id="editLocationXBtn" type="button" class="close" data-dismiss="modal"
 						aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
@@ -110,9 +110,9 @@
 
 					</div>
 					<div class="modal-footer">
-					<input id="submitBtn" type="submit" ng-value="Save" class="btn btn-primary"
+					<input id="editLocationSubmitBtn" type="submit" ng-value="Save" class="btn btn-primary"
 						data-dismiss="modal" ng-click="updateLocation()">
-					<button id="closeBtn" type="button" class="btn btn-default" data-dismiss="modal">Close</button> 
+					<button id="editLocaitonCloseBtn" type="button" class="btn btn-default" data-dismiss="modal">Close</button> 
 
 				</div>
 
