--- a/caliber/src/main/webapp/static/app/partials/trainers/delete-trainer-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/trainers/delete-trainer-modal.html
@@ -5,7 +5,7 @@
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<button id="XBtn" type="button" class="close" data-dismiss="modal"
+					<button id="deleteTrainerXBtn" type="button" class="close" data-dismiss="modal"
 						aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
@@ -17,9 +17,9 @@
 					<br />
 				</div>
 				<div class="modal-footer">
-					<input id="deleteBtn" type="submit" ng-click="makeInactive()" value="Delete"
+					<input id="deleteTrainerDeleteBtn" type="submit" ng-click="makeInactive()" value="Delete"
 						class="btn btn-lg btn-danger">
-					<button id="cancelBtn" type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+					<button id="deleteTrainerCancelBtn" type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
 				</div>
 			</div>
 		</div>
