--- a/caliber/src/main/webapp/static/app/partials/trainers/edit-trainer-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/trainers/edit-trainer-modal.html
@@ -5,7 +5,7 @@
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
-					<button id="XBtn" type="button" class="close" data-dismiss="modal"
+					<button id="editTrainerXBtn" type="button" class="close" data-dismiss="modal"
 						aria-label="Close">
 						<span aria-hidden="true">&times;</span>
 					</button>
@@ -56,8 +56,8 @@
 						</div>
 					</div>
 					<div class="modal-footer">
-						<input id="saveBtn" type="submit" ng-value="Save" class="btn btn-primary">
-						<button id="closeBtn" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+						<input id="editTrainerSaveBtn" type="submit" ng-value="Save" class="btn btn-primary">
+						<button id="editTrainerCloseBtn" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 					</div>
 				</div>
 			</div>
