--- a/caliber/src/main/webapp/static/app/partials/assess/trainer-edit-assess.html
+++ b/caliber/src/main/webapp/static/app/partials/assess/trainer-edit-assess.html
@@ -13,7 +13,7 @@
 					<div class="row">
 						<div class="form-group col-lg-12 col-md-12 col-sm-12" style="text-align: left">
 							<label for="category">Assessment Category:</label> 
-							<select class="form-control" id="category" 
+							<select class="form-control" id="editSelectAssessmentCategory" 
 								ng-options="option.skillCategory for option in category.options" 
 								ng-model="updateAssessmentModel.category"
 								required
