--- a/caliber/src/main/webapp/static/app/partials/assess/trainer-assess.html
+++ b/caliber/src/main/webapp/static/app/partials/assess/trainer-assess.html
@@ -202,7 +202,7 @@
 					<div class="row">
 						<div class="form-group col-lg-12 col-md-12 col-sm-12">
 							<label for="category">Assessment Category:</label> <select
-								ng-model="category.model" class="form-control" id="category"
+								ng-model="category.model" class="form-control" id="createSelectAssessmentCategory"
 								required>
 								<option value="" disabled>Select Assessment Category</option>
 								<option ng-repeat="option in category.options"
