Fixed up Assess Batch Page

--- a/caliber/src/main/webapp/static/app/partials/assess/trainer-assess.html
+++ b/caliber/src/main/webapp/static/app/partials/assess/trainer-assess.html
@@ -222,7 +222,7 @@
 						<div class="form-group col-md-6 col-sm-6">
 							<label for="assessmentType">Assessment Type:</label> <select
 								ng-model="assessmentType.model" class="form-control"
-								id="assessmentType" required>
+								id="selectCreateAssessmentType" required>
 								<option value="" disabled>Select Assessment Type</option>
 								<option ng-repeat="option in assessmentType.options">{{option}}</option>
 							</select>
