--- a/caliber/src/main/webapp/static/app/partials/locations/create-location-modal.html
+++ b/caliber/src/main/webapp/static/app/partials/locations/create-location-modal.html
@@ -22,7 +22,7 @@
 							<div class="form-group col-lg-6 col-md-6 col-sm-12">
 								<label for="locationCompany">Company Name:</label> <input
 									ng-model="locationForm.company" type="text"
-									class="form-control" id="locationCompany"
+									class="form-control" id="createLocationCompany"
 									placeholder="Enter Company Name" required>
 							</div>
 							
@@ -30,7 +30,7 @@
 							<div class="form-group col-lg-6 col-md-6 col-sm-12">
 								<label for="locationStreet">Street Address:</label> <input
 									ng-model="locationForm.street" type="text" class="form-control"
-									id="locationStreet" placeholder="Enter Street Address" required>
+									id="createLocationStreet" placeholder="Enter Street Address" required>
 							</div>
 						</div>
 
@@ -39,13 +39,13 @@
 							<div class="form-group col-lg-6 col-md-6 col-sm-12">
 								<label for="locationCity">City:</label> <input
 									ng-model="locationForm.city" type="text" class="form-control"
-									id="locationCity" placeholder="Enter City" required>
+									id="createLocationCity" placeholder="Enter City" required>
 							</div>
 							<!-- STATE -->
 							<div class="form-group col-lg-6 col-md-6 col-sm-12">
 								<label for="locationState">State:</label> <select
 									ng-model="locationForm.state" class="form-control"
-									id="locationState" ng-required="true">
+									id="createLocationState" ng-required="true">
 									<option value="" disabled>Select State</option>
 									<option id="AL" value="AL">Alabama</option>
 									<option id="AK" value="AK">Alaska</option>
@@ -107,7 +107,7 @@
 							<div class="form-group col-lg-6 col-md-6 col-sm-12">
 								<label for="locationZipCode">Zipcode:</label> <input
 									ng-model="locationForm.zipcode" type="text"
-									class="form-control" id="locationZipCode"
+									class="form-control" id="createLocationZipCode"
 									placeholder="Enter Zipcode" required>
 							</div>
 						</div>
@@ -115,7 +115,7 @@
 						
 					</div>
 					<div class="modal-footer">
-						<input id="createLocationSubmintBtn" type="submit" ng-value="Save" class="btn btn-primary"
+						<input id="createLocationSubmitBtn" type="submit" ng-value="Save" class="btn btn-primary"
 						data-dismiss="modal" ng-click="createLocation(locationForm)">
 						<button id="createLocationCloseBtn" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 					</div>
