--- a/caliber/src/main/webapp/static/app/partials/locations/manage-locations.html
+++ b/caliber/src/main/webapp/static/app/partials/locations/manage-locations.html
@@ -30,31 +30,32 @@
 					</thead>
 					<tbody>
 						<tr ng-repeat="location in allLocations track by $index">
-							<td ng-if="location.active == 0"><span
+							<td ng-if="location.active == 0" value="{{location.active}}" id="locationInactiveGlyphicon{{$index}}"><span
 								style="color: #ff7575" class="glyphicon glyphicon-remove fa-2x"
 								aria-hidden="true"> </span></td>
-							<td ng-if="location.active == 1"><span
+							<td ng-if="location.active == 1" value="{{location.active}}" id="locationActiveGlyphicon{{$index}}"><span
 								style="color: #81f575" class="fa fa-check fa-2x"
 								aria-hidden="true"> </span></td>
 
-							<td>{{location.company}}</td>
-							<td>{{location.street}} {{location.city}},
+							<td id="locationCompany{{$index}}" value="{{location.company}}">{{location.company}}</td>
+							<td id="locationDetails{{$index}}" value="{{location.street}} {{location.city}}, {{location.state}} {{location.zipcode}}">{{location.street}} {{location.city}},
 								{{location.state}} {{location.zipcode}}</td>
 
 							<!-- Buttons -->
-							<td><a role="button" class="pull-right"
+							<td><a role="button" class="pull-right" id="editLocationModal{{$index}}"
 								ng-click="populateLocation($index)" data-toggle="modal"
 								data-target="#editLocationModal"><span
 									class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
 
-							<td ng-if="location.active == 1"><a role="button" class="pull-right"
-								ng-click="updateSelectedLocation($index)" data-toggle="modal"
-								data-target="#deleteLocationModal"><span
+							<td ng-if="location.active == 1" id="xMarkGlyphicon{{$index}}" value="{{location.active}}" ><a role="button" class="pull-right"
+								ng-click="updateSelectedLocation($index)" data-toggle="modal" id="deleteLocationModal{{$index}}"
+								data-target="#deleteLocationModal" value="{{location.active}}" ><span
 									class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></td>
 
-								<td ng-if="location.active == 0"><a role="button" class="pull-right"
+								<td ng-if="location.active == 0" id="okGlyphicon{{$index}}" value="{{location.active}}" 
+								><a role="button" class="pull-right"
 								ng-click="updateSelectedLocation($index)" data-toggle="modal"
-								data-target="#addLocationModal"><span
+								data-target="#addLocationModal" id="addLocationModal{{$index}}"><span
 									class="glyphicon glyphicon-ok" aria-hidden="true"></span></a></td>
 
 					</tbody>
