--- a/caliber/src/main/webapp/static/app/partials/assess/qc-assess.html
+++ b/caliber/src/main/webapp/static/app/partials/assess/qc-assess.html
@@ -174,7 +174,7 @@
 				<div class='save-button-wrapper'>
 					<a ng-click="saveQCandTrainee()" ng-show="showFloppy"
 						class='save-button fade-in'
-						id= "saveButton"> <span
+						id= "QASaveBtn"> <span
 						class="fa fa-floppy-o fa-2x" aria-hidden="true"></span>Save
 					</a>
 					<!-- Events after clicking save button -->
