--- a/caliber/src/main/webapp/static/app/partials/abstracts/vp.html
+++ b/caliber/src/main/webapp/static/app/partials/abstracts/vp.html
@@ -12,6 +12,7 @@
 			<li><a ui-sref="vp.assess">Assess Batch</a></li>
 			<li><a ui-sref="vp.audit">Quality Audit</a></li>
 			<li><a ui-sref="vp.reports">Reports</a></li>
+			<li><a ui-sref="vp.panels">Panels</a></li>			
 			<li role="presentation" class="dropdown"><a
 				class="dropdown-toggle" data-toggle="dropdown" role="button"
 				aria-haspopup="true" aria-expanded="false">Settings<span
