--- a/caliber/src/main/webapp/static/app/partials/assess/trainer-assess.html
+++ b/caliber/src/main/webapp/static/app/partials/assess/trainer-assess.html
@@ -88,7 +88,7 @@
 								<th class="col-sm-2 col-md-2 col-lg-2">Trainee</th>
 								<div>
 									<th class="col-sm-1 col-md-1 col-lg-1 text-center"
-										role="button" data-toggle="modal"
+										role="button" data-toggle="modal" data-ng-click="setUpdateAssessmentToCurrent($index)"
 										data-target="#editAssessmentModal_{{assessment.assessmentId}}"
 										ng-repeat="assessment in currentAssessments track by $index">
 										{{assessment.title}}
