added trainer name to datalist for searching to allow FireFox/Edge users to see trainee names in dropdown

--- a/caliber/src/main/webapp/static/app/partials/reports.html
+++ b/caliber/src/main/webapp/static/app/partials/reports.html
@@ -24,10 +24,10 @@
                 <form ng-submit="selectChosenTrainee()">
                     <span class="icon"><button type="submit" class="SearchButton"><i class="fa fa-search"></i></button></span>
                       <input ng-model="chosenTrainee" list="traineeList" type="search" id="searchTextBox" 
-                      		placeholder="Search..." class="form-control SearchPad" autocomplete="on" />
+                      		placeholder="Search..." class="form-control SearchPad" autocomplete="off" />
                       <datalist id="traineeList">
 	    						<option ng-repeat="trainee in allTrainees track by $index" ng-value="trainee.name">
-	    							{{trainee.email}} | {{trainee.skypeId}} 
+	    							{{trainee.name}} | {{trainee.email}} | {{trainee.skypeId}} 
 	    						</option>
 	    			  </datalist>
                 </form>
