--- a/caliber/src/main/webapp/static/app/partials/paneldemo/samplemodal.html
+++ b/caliber/src/main/webapp/static/app/partials/paneldemo/samplemodal.html
@@ -1,166 +1,98 @@
 <form ng-init="preventModalClose()">
-	<div class="modal fade" id="samplemodal" tabindex="-1">
-		<div class="container">
-        <div class="container">
-            <div id="technical-feedback">
-                <div class="panel panel-default">
-                    <div class="panel-heading"> Panel Interview Feedback </div>
-                    <h3></h3>
-                    <div id="logo">
-                        <!-- <img src=“RevLogo”> --></div>
-                    <div class = "form-group">
-                        <div>
-                            <div class = "form-row">
-                                <div class = "form-group col-md-6">
-                                    Name of the Associate
-       
-                                   <input type = "text" class = "form-control" readonly = "true" ng-bind="trainee.firstName +' '+trainee.lastName" />
-                                </div>
-                            </div>
-                            <div class = "form-row">
-                                <div class = "form-group col-md-6">
-                                    Panelist Name
-                                    <input type = "text" class = "form-control" readonly = "true" ng-bind="trainer.firstname +' '+trainer.lastname"/>
-                                </div>
-                            </div>
-                            <div class = "form-row">
-                                <div class = "form-group col-md-6">
-                                    Training Track
-                                   <input type = "text" class = "form-control" ng-bind="trainee.trainingTrack">
-                                </div>
-                            </div>
-                            <div>
-                                <div class = "form-group col-md-6">
-                                    Panel Round
-                               
-                                    <input type = "text" class = "form-control" readonly = "true"ng-bind="panelInterview.round"/>
-                                </div>
-                            </div>
-                             <div class = "form-row">
-                                <div class = "form-group col-md-6">
-                                    Recording Consent
-                              
-                                   <input type = "text" class = "form-control" ng-bind="interviewPanel.consent">
-                                </div>
-                            </div>
-                             <div class = "form-row">
-                                <div class = "form-group col-md-6">
-                                    Recording link
-                                
-                                    <input type = "text" class = "form-control" ng-bind="panelInterview.link">
-                                </div>
-                            </div>
-                        </div>
-                        <div>
-                            <div class = "form-row">
-                                <div class = "form-group col-md-6">
-                                    Interview Date
-                               
-                                  <input type = "text" class = "form-control" ng-bind="panelInterview.date">
-                                </div>
-                            </div>
-                            <div class = "form-row">
-                                <div class = "form-group col-md-6">
-                                    Interview Time
-                                
-                                    <input type = "text" class = "form-control" ng-bind="panelInterview.time">
-                                </div>
-                            </div>
-                             <div class = "form-row">
-                                <div class = "form-group col-md-6">
-                                    Interview Duration
-                                
-                                    <input type = "text" class = "form-control" ng-bind="panelInterview.duration">
-                                </div>
-                            </div>
-                             <div class = "form-row">
-                                <div class = "form-group col-md-6">
-                                    Interview Mode
-                               
-                                    <input type = "text" class = "form-control" ng-bind="panelInterview.mode">
-                                </div>
-                            </div>
-                             <div>
-                                <div class = "form-group col-md-6">
-                                    Overall Feedback
-                                
-                                    <input type = "text" class = "form-control" ng-bind="panelInterview.overall">
-                                </div>
-                            </div>
-                            <div>
-                                <div class = "form-group col-md-6">
-                                    Internet Connectivity
-                                
-                                   <input type = "text" class = "form-control" ng-bind="panelInterview.connectivity">
-                             
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div id="technical-feedback">
-                <div class="panel panel-default">
-                    <div class="panel-heading">Technical Feedback</div>
-                    <table id="feedback" class="table table=responsive">
-                        <tr>
-                            <th> Technology </th>
-                            <th> Result </th>
-                            <th> Repanel </th>
-                            <th> Comment </th>
-                        </tr>
-                        <tr ng-repeat="item in feedback">
-                            <td>{{item.technology}}</td>
-                            <td>{{item.result}}</td>
-                            <td>{{item.repanel}}</td>
-                            <td>{{item.comment}}</td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div id="technical-feedback">
-                <div class="panel panel-default">
-                    <div class="panel-heading">General Feedback</div>
-                    <div id="general-feedback">
-                        <table id="feedback" class="table table=responsive">
-                            <tr>
-                                <th>Criteria</th>
-                                <th>Comment</th>
-                            </tr>
-                            <tr>
-                                <td><b>Associate Introduction</b></td>
-                                <td>{{panelInterview.generalFeedback.introduction.comment}}</td>
-                            </tr>
-                            <tr>
-                                <td><b>Project 1 Explanation</b></td>
-                                <td>{{panelInterview.generalFeedback.project1}}</td>
-                            </tr>
-                            <tr>
-                                <td><b>Project 2 Explanation</b></td>
-                                <td>{{panelInterview.generalFeedback.project2}}</td>
-                            </tr>
-                            <tr>
-                                <td><b>Project 3 Explanation</b></td>
-                                <td>{{panelInterview.generalFeedback.project3}}</td>
-                            </tr>
-                            <tr>
-                                <td><b>Communication Skills</b></td>
-                                <td>{{panelInterview.generalFeedback.communication}}</td>
-                            </tr>
-                            <tr>
-                                <td><b>Overall</b></td>
-                                <td>{{panelInterview.generalFeedback.overall}}</td>
-                            </tr>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    </div>
+	<div id="samplemodal" class="modal fade">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+ 					<div style="float:left;width:50%"><br><br><h4 class="modal-title" id="panelFeedbackModal">Panel Interview Feedback Form</h4></div>
+ 					<div style="float:right;width:50%"><img class="img-responsive" src="/static/app/resources/images/rev-brand.png" alt="revature" height="175" width="175" align="right"/></div>
+ 				</div>
+				<div class="modal-body">
+					<div class="panel panel-default">
+						<div class="panel-heading">Interview Details</div>
+						<div class="panel-body">
+							<div class="form-group col-md-6">
+								<b>Name of the Associate</b> <input type="text" class="form-control" readonly="true" ng-bind="trainee.firstName + ' ' + trainee.lastName" /><br> 
+								<b>Panelist Name</b> <input type="text" class="form-control" readonly="true" ng-bind="panelist.firstName + ' ' + panelist.lastName" /><br> 
+								<b>Training Track</b> <input type="text" class="form-control" readonly="true" ng-bind="trainee.trainingTrack" /><br> 
+								<b>Panel Round</b> <input type="text" class="form-control" readonly="true" ng-bind="panelInterview.round" /><br> 
+								<b>Recording Consent</b> <input type="text" class="form-control" readonly="true" ng-bind="interviewPanel.consent" /><br> 
+								<b>Recording Link</b> <input type="text" class="form-control" readonly="true" ng-bind="panelInterview.link" /><br>
+							</div>
+							<div class="form-group col-md-6">
+								<b>Interview Date</b> <input type="text" class="form-control" readonly="true" ng-bind="panelInterview.date" /><br> 
+								<b>Interview Time</b> <input type="text" class="form-control" readonly="true" ng-bind="panelInterview.time" /><br> 
+								<b>Interview Duration</b> <input type="text" class="form-control" readonly="true" ng-bind="panelInterview.duration" /><br> 
+								<b>Interview Model</b> <input type="text" class="form-control" readonly="true" ng-bind="panelInterview.mode" /><br> 
+								<b>Overall Feedback</b> <input type="text" class="form-control" readonly="true" ng-bind="panelInterview.overall" /><br> 
+								<b>Internet Connectivity</b> <input type="text" class="form-control" readonly="true" ng-bind="panelInterview.connectivity" /><br>
+							</div>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading">Technical Feedback</div>
+						<div class="panel-body">
+							<table id="technicalFeedback" class="table table=responsive">
+                        		<tr>
+                            		<th> Technology </th>
+                            		<th> Result </th>
+                            		<th> Repanel </th>
+                            		<th> Comment </th>
+                        		</tr>
+                        		<tr class="form-group">
+                        			<!-- this needs to be a select input type -->
+                            		<td><select ng-model="" class="form-control" id="technicalFeedback.technology">
+                            			<option ng-repeat="">{{}}</option>
+                            		</select></td>
+                            		<!-- this needs to be a select input type -->
+                            		<td><select ng-model="" class="form-control" id="technicalFeedback.result">
+                            			<option ng-repeat="">{{}}</option>
+                            		</select></td>
+                            		<td><input type="checkbox" style="float:bottom;" class="faChkSqr" id="technicalFeedback.repanel"></td>
+                            		<td><input type="text" class="form-control" id="technicalFeedback.comment"></td>
+                        		</tr>
+                    		</table>
+						</div>
+					</div>
+					<div class="panel panel-default">
+						<div class="panel-heading">General Feedback</div>
+						<div class="panel-body">
+							<table id="generalFeedback" class="table table=responsive">
+                            	<tr>
+                                	<th>Criteria</th>
+                                	<th>Comment</th>
+                            	</tr>
+                            	<tr>
+                                	<td><b>Associate Introduction</b></td>
+                                	<td><input type="text" class="form-control" id="generalFeedback.ai"></td>
+                            	</tr>
+                            	<tr>
+                                	<td><b>Project 1 Explanation</b></td>
+                                	<td><input type="text" class="form-control" id="generalFeedback.p1expl"></td>
+                            	</tr>
+                            	<tr>
+                                	<td><b>Project 2 Explanation</b></td>
+                                	<td><input type="text" class="form-control" id="generalFeedback.p2expl"></td>
+                            	</tr>
+                            	<tr>
+                                	<td><b>Project 3 Explanation</b></td>
+                                	<td><input type="text" class="form-control" id="generalFeedback.p3expl"></td>
+                            	</tr>
+                            	<tr>
+                                	<td><b>Communication Skills</b></td>
+                                	<td><input type="text" class="form-control" id="generalFeedback.commskills"></td>
+                            	</tr>
+                            	<tr>
+                                	<td><b>Overall</b></td>
+                                	<td><input type="text" class="form-control" id="generalFeedback.overall"></td>
+                            	</tr>
+                        	</table>
+						</div>
+					</div>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Submit</button>
+				</div>
+			</div>
+		</div>
 	</div>
 </form>
