--- a/caliber/src/main/webapp/static/app/partials/paneldemo/samplemodal.html
+++ b/caliber/src/main/webapp/static/app/partials/paneldemo/samplemodal.html
@@ -13,8 +13,7 @@
                             <div class = "form-row">
                                 <div class = "form-group col-md-6">
                                     Name of the Associate
-       
-                                   <input type = "text" class = "form-control" readonly = "true" ng-bind="trainee.firstName +' '+trainee.lastName" />
+                                   <input type = "text" class = "form-control" readonly = "true" ng-bind = "" />
                                 </div>
                             </div>
                             <div class = "form-row">
@@ -88,7 +87,7 @@
                                 </div>
                             </div>
                             <div>
-                                <div class = "form-group col-md-6">
+                                <div class = "form-group">
                                     Internet Connectivity
                                 
                                    <input type = "text" class = "form-control" ng-bind="panelInterview.connectivity">
