--- a/caliber/src/main/webapp/static/app/partials/reports.html
+++ b/caliber/src/main/webapp/static/app/partials/reports.html
@@ -532,6 +532,7 @@
 				<!-- Row With Bottom 2 Charts -->
 			</div>
 			<div ui-view="trainee-overall" ng-if="displayTraineeOverallTable()"></div>
+			<div ui-view ="panel-report-display"></div>
 		</div>
 		<!-- Row with all 3 Chart-->
 
