--- a/caliber/src/main/webapp/static/app/partials/paneldemo/samplemodal.html
+++ b/caliber/src/main/webapp/static/app/partials/paneldemo/samplemodal.html
@@ -14,12 +14,11 @@
 								<b>Name of the Associate</b> <input type="text" class="form-control" ng-init="associate.firstName + ' ' + associate.lastName" disabled /><br> 
 								<b>Panelist Name</b> <input type="text" class="form-control" placeholder="Firstname Lastname" ng-bind="panelist.firstName + ' ' + panelist.lastName" /><br> 
 								<b>Training Track</b> <input type="text" class="form-control" ng-bind="trainee.trainingTrack" /><br> 
-								<b>Panel Round</b> <input type="number" class="form-control" placeholder="Select a value between 1 - 10"  min="1" max="10" ng-bind="panelInterview.round" /><br> 
+								<b>Panel Round</b> <input type="number" class="form-control" placeholder="Select a value between 1 - 10"  min="1" max="10" ng-bind="panelInterview.round" required /><br> 
 								<b>Recording Consent</b> <input type="number" class="form-control" placeholder="Select a value between 0 - 1"  min="0" max="1" ng-bind="interviewPanel.consent" /><br> 
 								<b>Recording Link</b> <input type="text" class="form-control" ng-bind="panelInterview.link" /><br>
 							</div>
 							<div class="form-group col-md-6">
-							<!-- Interview Date and Time need to use the Moment Picker -->
 								<b>Interview Date</b> <div class="input-group">
 													  <input class="date-input form-control date-selector" name="i"
 													  min="0" placeholder="Interview Date" 
