changed size of modal to large

--- a/caliber/src/main/webapp/static/app/partials/paneldemo/samplemodal.html
+++ b/caliber/src/main/webapp/static/app/partials/paneldemo/samplemodal.html
@@ -1,6 +1,6 @@
 <form ng-init="preventModalClose()">
 	<div id="samplemodal" class="modal fade">
-		<div class="modal-dialog">
+		<div class="modal-dialog modal-lg">
 			<div class="modal-content">
 				<div class="modal-header">
  					<div style="float:left;width:50%"><br><br><h4 class="modal-title" id="panelFeedbackModal">Panel Interview Feedback Form</h4></div>
