--- a/caliber/src/main/webapp/static/app/partials/assess/qc-assess.html
+++ b/caliber/src/main/webapp/static/app/partials/assess/qc-assess.html
@@ -85,7 +85,7 @@
 									alt="Click to update your feedback."
 									ng-click="processingNote? null : pickIndividualStatus(trainee.name, qcStatusTypes[0], $index);"
 									ng-disabled="processingNote">
-										<i class="fa fa-question-circle fa-2x"></i>
+									<i class="fa fa-question-circle fa-2x"></i>
 								</button>
 									<button ng-hide="faces[$index].qcStatus !== qcStatusTypes[0]"
 										title="Excellent"
@@ -111,9 +111,17 @@
 									<button ng-hide="faces[$index].qcStatus !== qcStatusTypes[3]"
 										title="Poor"
 										class="hiddenButton col-lg-2 col-md-2 col-sm-2 col-sm-offset-1"
-										ng-click="pickIndividualStatus(trainee.name, qcStatusTypes[0], $index);"
+										ng-click="pickIndividualStatus(trainee.name, qcStatusTypes[4], $index);"
 										ng-disabled="processingNote">
 										<i class="fa fa-frown-o fa-2x pick"></i>
+									</button>
+									<button ng-hide="faces[$index].qcStatus !== qcStatusTypes[4]"
+										class="hiddenButton col-lg-2 col-md-2 col-sm-2 col-sm-offset-1"
+										title="Click to update your feedback."
+										alt="Click to update your feedback."
+										ng-click="pickIndividualStatus(trainee.name, qcStatusTypes[0], $index);"
+										ng-disabled="processingNote">
+										<i class="fa fa-question-circle fa-2x pick"></i>
 									</button></td>
 								<!-- Notes on each trainee. Each time you edit it, it will save it when you leave textfield -->
 								<td class="col-sm-9 col-md-9 col-lg-9"><textarea
