--- a/caliber/src/main/webapp/static/app/partials/reports.html
+++ b/caliber/src/main/webapp/static/app/partials/reports.html
@@ -320,16 +320,17 @@
 							<div class="panel panel-default">
 								<div class="panel-heading">Panel Feedback</div>
 								<div class="table-responsive">
-									<table id="batch-panel-status" class="table-responsive">
+									<table id="batch-panel-status" ng-if="weeklyProgressBatchOverallLabels" class="table"
+											style="border-collapse: collapse;">
 										<tr>
 											<th>Trainee Name</th>
 											<th>Panel Status</th>
 											<th>Repeat Topics</th>
 										</tr>
 										<tr ng-repeat="item in allTraineesPanelData">
-											<td ng-bind="item.trainee"></td>
-											<td ng-bind="item.status"></td>
-											<td ng-bind="item.topics"></td>
+											<td class="col-sm-4 col-md-4 col-lg-4" ng-bind="item.trainee"></td>
+											<td class="col-sm-3 col-md-3 col-lg-3"  ng-bind="item.status"></td>
+											<td class="col-sm-3 col-md-3 col-lg-3"  ng-bind="item.topics"></td>
 										</tr>
 									</table>
 								</div>
